# special-waffle

./: README.md  act.ipynb  pyproject.toml  sanity.py
mppi_plus_proto/dynamics_models/: models.py
mppi_plus_proto/eval/: load_controller.py
mppi_plus_proto/mppi/: mppi_presamplers.py
mppi_plus_proto/nn_models/: layers.py
mppi_plus_proto/trainers/: mutual_inf.py
mppi_plus_proto/util/: parallel_util.py
notebooks/: vis.ipynb
scripts/eval/: c2c.py  parse_barn.py  sudden_obstacle.py
scripts/mi/: train_mi_joint_unicycle_steer.py
tdmpc/cfgs/: default.yaml
tdmpc/src/: eval_mi_ab.py  mi_sampler.py  mi_trainer.py  train.py  train_mi.py
tdmpc/src/algorithm/: tdmpc.py
worlds/: world_0.npz  world_1.npz  world_10.npz  world_100.npz  world_101.npz  world_102.npz  world_103.npz  world_104.npz  world_105.npz  world_106.npz  world_107.npz  world_108.npz  world_109.npz  world_11.npz  world_110.npz  world_111.npz  world_112.npz  world_113.npz  world_114.npz  world_115.npz  world_116.npz  world_117.npz  world_118.npz  world_119.npz  world_12.npz  world_120.npz  world_121.npz  world_122.npz  world_123.npz  world_124.npz  world_125.npz  world_126.npz  world_127.npz  world_128.npz  world_129.npz  world_13.npz  world_130.npz  world_131.npz  world_132.npz  world_133.npz  (+260 more)
