[project]
name = "mppi-plus-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoroot>=1.0.1",
    "autorootcwd>=1.0.1",
    "fire>=0.7.1",
    "ipynbname>=2025.8.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "normflows>=1.7.3",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
